# api/controllers/users.controller.ts
@@ -1,224 +1,0 @@
-import { Selectable } from 'kysely'
-// transitive dependency of `@asteasolutions/zod-to-openapi`
-import type { TagObject } from 'openapi3-ts/oas31'
-import { z } from 'zod'
-import { validateRequest } from 'zod-express-middleware'
-
-import { db } from '@/api/database/client'
-import { DB } from '@/api/database/db'
-import { registry } from '@/api/spec/registry'
-import { makeHandlers } from '@/api/utils/express-types'
-
-const userSchema = z
-  .object({
-    // manual layer to decouple DB schema from
-    // application interface
-    id: z.string().uuid(),
-    firstName: z.string(),
-    lastName: z.string().nullable(),
-    gender: z.string(),
-    createdAt: z.date(),
-  })
-  .openapi({
-    example: {
-      id: 'f4853b42-8aa8-48ce-83b2-390bbe230cd0',
-      firstName: 'John',
-      lastName: 'Doe',
-      gender: 'male',
-      createdAt: new Date('2023-08-04 19:33:00.636659+00'),
-    },
-  })
-
-type userSchema = z.infer<typeof userSchema>
-
-// Person to Response
-const personToResponse = (person: Selectable<DB['persons']>): userSchema => {
-  const response = {
-    id: person.id,
-    firstName: person.first_name,
-    lastName: person.last_name,
-    gender: person.gender,
-    createdAt: person.created_at,
-  } satisfies userSchema
-  return response
-}
-
-export class UsersController {
-  // For ApiDocs
-  static spec: {
-    tag: TagObject
-  } = {
-    tag: {
-      name: 'Users',
-      description: 'Operations about users',
-    },
-  }
-
-  static getUsers = {
-    params: undefined,
-    response: z.array(userSchema),
-    handler() {
-      const handlers = makeHandlers(null, async (req, res) => {
-        // query the DB
-        const users = await db.selectFrom('persons').selectAll().execute()
-        // manually map DB schema to application interface
-        const mappedUsers = users.map((user) => personToResponse(user))
-        const parseResult =
-          UsersController.getUsers.response.safeParse(mappedUsers)
-
-        if (!parseResult.success) {
-          res.status(500).json({
-            error: parseResult.error,
-          })
-        }
-
-        if (parseResult.success) {
-          res.json(parseResult.data)
-        }
-      })
-      return handlers
-    },
-  }
-
-  static getUser = {
-    params: z
-      .object({
-        user_id: z.string().uuid(),
-      })
-      .openapi({
-        example: { user_id: '5385a833-2935-4bca-bd59-379366a027ea' },
-      }),
-    response: userSchema,
-    handler() {
-      const handlers = makeHandlers(
-        validateRequest({
-          params: UsersController.getUser.params,
-        }),
-        (req, res) => {
-          res.json({
-            user: {
-              id: req.params.user_id,
-            },
-          })
-        }
-      )
-      return handlers
-    },
-  }
-
-  static createUser = {
-    body: userSchema.omit({ id: true, createdAt: true }).openapi({
-      example: {
-        firstName: 'John',
-        lastName: 'Doe',
-        gender: 'male',
-      },
-    }),
-    response: userSchema,
-    handler() {
-      const handlers = makeHandlers(
-        validateRequest({
-          body: UsersController.createUser.body,
-        }),
-        async (req, res) => {
-          // insert into DB
-          const insertResult = await db
-            .insertInto('persons')
-            .values({
-              first_name: req.body.firstName,
-              last_name: req.body.lastName,
-              gender: req.body.gender,
-            })
-            .returningAll()
-            .execute()
-          // manually map DB schema to application interface
-          const mappedUser = personToResponse(insertResult[0])
-
-          const parseResult =
-            UsersController.createUser.response.safeParse(mappedUser)
-
-          if (!parseResult.success) {
-            res.status(500).json({
-              error: parseResult.error,
-            })
-          }
-          if (parseResult.success) {
-            res.status(201).json(parseResult.data)
-          }
-        }
-      )
-      return handlers
-    },
-  }
-}
-
-registry.registerPath({
-  method: 'get',
-  operationId: 'getUsers',
-  path: '/users',
-  tags: [UsersController.spec.tag.name],
-  summary: 'Get all users',
-  description: 'Get all users',
-  request: {},
-  responses: {
-    200: {
-      description: 'Array of users.',
-      content: {
-        'application/json': {
-          schema: UsersController.getUser.response,
-        },
-      },
-    },
-  },
-})
-
-registry.registerPath({
-  method: 'get',
-  operationId: 'getUser',
-  path: '/users/{id}',
-  tags: [UsersController.spec.tag.name],
-  description: 'Get user data by its id',
-  summary: 'Get a single user',
-  request: {
-    params: UsersController.getUser.params,
-  },
-  responses: {
-    200: {
-      description: 'Object with user data.',
-      content: {
-        'application/json': {
-          schema: UsersController.getUser.response,
-        },
-      },
-    },
-  },
-})
-
-registry.registerPath({
-  method: 'post',
-  operationId: 'createUser',
-  path: '/users',
-  tags: [UsersController.spec.tag.name],
-  description: 'Create a new user',
-  summary: 'Create a new user',
-  request: {
-    body: {
-      description: 'Payload for creating a new user.',
-      content: {
-        'application/json': {
-          schema: UsersController.createUser.body,
-        },
-      },
-    },
-  },
-  responses: {
-    201: {
-      description: 'Object with user data.',
-      content: {
-        'application/json': {
-          schema: UsersController.createUser.response,
-        },
-      },
-    },
-  },
-})
